[fix] fix layout overlap by adding invisible button

--- a/css/general.css
+++ b/css/general.css
@@ -262,7 +262,7 @@ html {
   padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
   padding-bottom: 50px;
   color: #f8f8f8;
-  background: url(../img/intro/mlsb-img.png) no-repeat center center;
+  background: url(../img/intro/ai_dd_conference_banner.png) no-repeat center center;
   background-size: cover;
   text-align: center;
 }
